test linear correlation of input variables to target

--- a/notebooks/1.0-bmp-linear-correlation-hypothesis.ipynb
+++ b/notebooks/1.0-bmp-linear-correlation-hypothesis.ipynb
@@ -338,6 +338,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "The `LotArea` variable presents indeed a low correlation. `OverallQual` has a strong correlation. The others are safely within the mild correlation zone."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Hypothesis tests"
    ]
   },
@@ -352,16 +359,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11.510865732852656"
+       "LotArea         11.510860\n",
+       "TotRmsAbvGrd    20.780529\n",
+       "YearBuilt       21.753685\n",
+       "GarageCars      27.741111\n",
+       "OverallQual     46.893649\n",
+       "Name: corr, dtype: float64"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +382,14 @@
     "def t(r, n=df.shape[0]):\n",
     "    return r * np.sqrt(n - 2) / np.sqrt(1 - r * r)\n",
     "\n",
-    "t(0.349376)"
+    "df_corr['corr'].apply(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can negate the null-hypothesis for all of the input variables with 95\\% confidence."
    ]
   }
  ],
