--- a/notebooks/1.0-bmp-linear-correlation-hypothesis.ipynb
+++ b/notebooks/1.0-bmp-linear-correlation-hypothesis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>LotArea</th>\n",
        "      <th>OverallQual</th>\n",
        "      <th>YearBuilt</th>\n",
        "      <th>TotRmsAbvGrd</th>\n",
@@ -69,13 +68,11 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>9.041922</td>\n",
        "      <td>7</td>\n",
        "      <td>2003</td>\n",
        "      <td>8</td>\n",
@@ -84,7 +81,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>9.169518</td>\n",
        "      <td>6</td>\n",
        "      <td>1976</td>\n",
        "      <td>6</td>\n",
@@ -93,7 +89,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>9.328123</td>\n",
        "      <td>7</td>\n",
        "      <td>2001</td>\n",
        "      <td>6</td>\n",
@@ -102,7 +97,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>9.565214</td>\n",
        "      <td>8</td>\n",
        "      <td>2000</td>\n",
        "      <td>9</td>\n",
@@ -111,7 +105,6 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>9.554993</td>\n",
        "      <td>5</td>\n",
        "      <td>1993</td>\n",
        "      <td>5</td>\n",
@@ -123,16 +116,16 @@
        "</div>"
       ],
       "text/plain": [
-       "     LotArea  OverallQual  YearBuilt  TotRmsAbvGrd  GarageCars  SalePrice\n",
-       "Id                                                                       \n",
-       "1   9.041922            7       2003             8           2  12.247694\n",
-       "2   9.169518            6       1976             6           2  12.109011\n",
-       "3   9.328123            7       2001             6           2  12.317167\n",
-       "5   9.565214            8       2000             9           3  12.429216\n",
-       "6   9.554993            5       1993             5           2  11.870600"
+       "    OverallQual  YearBuilt  TotRmsAbvGrd  GarageCars  SalePrice\n",
+       "Id                                                             \n",
+       "1             7       2003             8           2  12.247694\n",
+       "2             6       1976             6           2  12.109011\n",
+       "3             7       2001             6           2  12.317167\n",
+       "5             8       2000             9           3  12.429216\n",
+       "6             5       1993             5           2  11.870600"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,18 +141,15 @@
     "df['SalePrice'] = df['SalePrice'].apply(np.log)\n",
     "\n",
     "# input variables\n",
-    "input_variables = ['LotArea', 'OverallQual', 'YearBuilt', 'TotRmsAbvGrd', 'GarageCars']\n",
+    "input_variables = ['OverallQual', 'YearBuilt', 'TotRmsAbvGrd', 'GarageCars']\n",
     "df = df[input_variables + ['SalePrice', ]]\n",
-    "\n",
-    "# lot area normalization\n",
-    "df['LotArea'] = df['LotArea'].apply(np.log)\n",
     "\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,13 +167,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LotArea         0.349376\n",
        "TotRmsAbvGrd    0.558417\n",
        "YearBuilt       0.576022\n",
        "GarageCars      0.668399\n",
@@ -191,7 +180,7 @@
        "Name: SalePrice, dtype: float64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,13 +201,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LotArea          [0.29241939186022864, 0.40386232089516]\n",
        "TotRmsAbvGrd    [0.5131574554784188, 0.6005788383928516]\n",
        "YearBuilt       [0.5320255704916634, 0.6169166042783123]\n",
        "GarageCars       [0.6317481525272429, 0.702067324252386]\n",
@@ -226,7 +214,7 @@
        "Name: SalePrice, dtype: object"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -280,12 +268,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>LotArea</th>\n",
-       "      <td>0.292419</td>\n",
-       "      <td>0.349376</td>\n",
-       "      <td>0.403862</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>TotRmsAbvGrd</th>\n",
        "      <td>0.513157</td>\n",
        "      <td>0.558417</td>\n",
@@ -315,14 +297,13 @@
       ],
       "text/plain": [
        "                   low      corr      high\n",
-       "LotArea       0.292419  0.349376  0.403862\n",
        "TotRmsAbvGrd  0.513157  0.558417  0.600579\n",
        "YearBuilt     0.532026  0.576022  0.616917\n",
        "GarageCars    0.631748  0.668399  0.702067\n",
        "OverallQual   0.815003  0.835257  0.853472"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -350,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,13 +340,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LotArea         11.510860\n",
        "TotRmsAbvGrd    20.780529\n",
        "YearBuilt       21.753685\n",
        "GarageCars      27.741111\n",
@@ -373,7 +353,7 @@
        "Name: corr, dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
