--- a/notebooks/1.1-bmp-multiple-linear-regression.ipynb
+++ b/notebooks/1.1-bmp-multiple-linear-regression.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/bruno/miniconda3/envs/ames/lib/python3.10/site-packages/statsmodels/compat/pandas.py:61: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import Int64Index as NumericIndex\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -183,10 +191,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   868.5</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 05 Mar 2022</td> <th>  Prob (F-statistic):</th> <td>1.72e-315</td>\n",
+       "  <th>Date:</th>             <td>Sun, 06 Mar 2022</td> <th>  Prob (F-statistic):</th> <td>1.72e-315</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:00:32</td>     <th>  Log-Likelihood:    </th> <td>  386.56</td> \n",
+       "  <th>Time:</th>                 <td>10:37:12</td>     <th>  Log-Likelihood:    </th> <td>  386.56</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   955</td>      <th>  AIC:               </th> <td>  -763.1</td> \n",
@@ -244,8 +252,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.785\n",
        "Model:                            OLS   Adj. R-squared:                  0.784\n",
        "Method:                 Least Squares   F-statistic:                     868.5\n",
-       "Date:                Sat, 05 Mar 2022   Prob (F-statistic):          1.72e-315\n",
-       "Time:                        20:00:32   Log-Likelihood:                 386.56\n",
+       "Date:                Sun, 06 Mar 2022   Prob (F-statistic):          1.72e-315\n",
+       "Time:                        10:37:12   Log-Likelihood:                 386.56\n",
        "No. Observations:                 955   AIC:                            -763.1\n",
        "Df Residuals:                     950   BIC:                            -738.8\n",
        "Df Model:                           4                                         \n",
@@ -272,7 +280,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +315,7 @@
        "868.4713646565384"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +335,7 @@
        "1.716881943e-315"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +367,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +414,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ShapiroResult(statistic=0.9884241819381714, pvalue=7.54111795231438e-07)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import shapiro\n",
+    "\n",
+    "shapiro(results.resid)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -414,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +461,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +523,7 @@
        "456"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +543,7 @@
        "499"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +570,7 @@
        "0.005235602094240838"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
