--- a/notebooks/2.0-bmp-presentation.ipynb
+++ b/notebooks/2.0-bmp-presentation.ipynb
@@ -10,6 +10,8 @@
    "source": [
     "# _Ames housing_\n",
     "\n",
+    "---\n",
+    "\n",
     "Prediçao do preço de vendas de casas em Ames, Iowa - EUA."
    ]
   },
@@ -914,10 +916,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   868.5</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Sat, 05 Mar 2022</td> <th>  Prob (F-statistic):</th> <td>1.72e-315</td>\n",
+       "  <th>Date:</th>             <td>Sun, 06 Mar 2022</td> <th>  Prob (F-statistic):</th> <td>1.72e-315</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>23:06:49</td>     <th>  Log-Likelihood:    </th> <td>  386.56</td> \n",
+       "  <th>Time:</th>                 <td>11:05:46</td>     <th>  Log-Likelihood:    </th> <td>  386.56</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   955</td>      <th>  AIC:               </th> <td>  -763.1</td> \n",
@@ -975,8 +977,8 @@
        "Dep. Variable:              SalePrice   R-squared:                       0.785\n",
        "Model:                            OLS   Adj. R-squared:                  0.784\n",
        "Method:                 Least Squares   F-statistic:                     868.5\n",
-       "Date:                Sat, 05 Mar 2022   Prob (F-statistic):          1.72e-315\n",
-       "Time:                        23:06:49   Log-Likelihood:                 386.56\n",
+       "Date:                Sun, 06 Mar 2022   Prob (F-statistic):          1.72e-315\n",
+       "Time:                        11:05:46   Log-Likelihood:                 386.56\n",
        "No. Observations:                 955   AIC:                            -763.1\n",
        "Df Residuals:                     950   BIC:                            -738.8\n",
        "Df Model:                           4                                         \n",
@@ -1144,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1197,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1230,22 +1232,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Apesar do desempenho aquém em relação ao encontrado na literatura, o modelo é útil e significativo"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Erro médio de 12.3 %.\n"
+      "MAPE = \t12.335%\n",
+      "MAE = \t23007.6291\n",
+      "MSE = \t1138121550.1957\n",
+      "RMSE = \t33736.0571\n"
      ]
     }
    ],
    "source": [
-    "error = (np.exp(df['SalePrice']) - np.exp(results.fittedvalues)).abs()\n",
-    "relative_error = error / np.exp(df['SalePrice'])\n",
-    "print(f\"Erro médio de {100*relative_error.mean():.1f} %.\")"
+    "error = np.abs(np.exp(df['SalePrice']) - np.exp(results.fittedvalues))\n",
+    "\n",
+    "print(\n",
+    "    f\"MAPE = \\t{100*(np.abs(error) / np.exp(df['SalePrice'])).mean():.3f}%\"\n",
+    "    f\"\\nMAE  = \\t{error.mean():.4f}\"\n",
+    "    f\"\\nMSE  = \\t{np.square(error).mean():.4f}\"\n",
+    "    f\"\\nRMSE = \\t{np.sqrt(np.square(error).mean()):.4f}\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "- Próximos passos:\n",
+    " - Explorar outras variáveis\n",
+    " - Explorar transformações das variáveis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Muito Obrigado!\n",
+    "\n",
+    "Grupo:\n",
+    "\n",
+    "- Bruno Machado Pacheco\n",
+    "- Gabriel Ferrazzo\n",
+    "- Gustavo de Assis Schmidt\n",
+    "- Mateus Moro Torres"
    ]
   }
  ],
