--- a/notebooks/2.0-bmp-presentation.ipynb
+++ b/notebooks/2.0-bmp-presentation.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "---\n",
     "\n",
-    "Prediçao do preço de vendas de casas em Ames, Iowa - EUA."
+    "Predição do preço de vendas de casas em Ames, Iowa - EUA."
    ]
   },
   {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -919,7 +919,7 @@
        "  <th>Date:</th>             <td>Sun, 06 Mar 2022</td> <th>  Prob (F-statistic):</th> <td>1.72e-315</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>11:05:46</td>     <th>  Log-Likelihood:    </th> <td>  386.56</td> \n",
+       "  <th>Time:</th>                 <td>14:34:07</td>     <th>  Log-Likelihood:    </th> <td>  386.56</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   955</td>      <th>  AIC:               </th> <td>  -763.1</td> \n",
@@ -978,7 +978,7 @@
        "Model:                            OLS   Adj. R-squared:                  0.784\n",
        "Method:                 Least Squares   F-statistic:                     868.5\n",
        "Date:                Sun, 06 Mar 2022   Prob (F-statistic):          1.72e-315\n",
-       "Time:                        11:05:46   Log-Likelihood:                 386.56\n",
+       "Time:                        14:34:07   Log-Likelihood:                 386.56\n",
        "No. Observations:                 955   AIC:                            -763.1\n",
        "Df Residuals:                     950   BIC:                            -738.8\n",
        "Df Model:                           4                                         \n",
@@ -1005,7 +1005,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 23,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,6 +1016,8 @@
     "\n",
     "model = sm.OLS(Y, X)\n",
     "results = model.fit()\n",
+    "\n",
+    "\n",
     "\n",
     "results.summary()"
    ]
@@ -1244,7 +1246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 48,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1256,8 +1258,8 @@
      "output_type": "stream",
      "text": [
       "MAPE = \t12.335%\n",
-      "MAE = \t23007.6291\n",
-      "MSE = \t1138121550.1957\n",
+      "MAE  = \t23007.6291\n",
+      "MSE  = \t1138121550.1957\n",
       "RMSE = \t33736.0571\n"
      ]
     }
